# glove-python

./: .gitignore  README.md  coocurrence.py  dataset.py  glove.py  pyproject.toml  tokenizer.py  train.py  utils.py
data/: tokenizer.json
